<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >


    <item android:title="@string/login_bar">
        <menu>
            <item
                android:id="@+id/login"
                android:icon="@drawable/user"
                android:title="@string/login_nav_bar"/>
        </menu>
    </item>
    <item
        android:title="@string/service_bar">
        <menu>
            <item
                android:id="@+id/nav_notice"
                android:icon="@drawable/warning"
                android:title="@string/notice_nav_bar" />
            <item
                android:id="@+id/service"
                android:icon="@drawable/service"
                android:title="@string/service_nav_bar" />
            <item
                android:id="@+id/languege"
                android:icon="@drawable/service"
                android:title="@string/language_nav_bar" />
        </menu>
    </item>
    <item android:title="@string/manager_bar">
        <menu>
            <item
            android:id="@+id/manager"
            android:icon="@drawable/ic_baseline_build_24"
            android:title="@string/manager_nav_bar"/>
        </menu>
    </item>
</menu>